@@ -185,6 +185,10 @@ if(!isGeneric("p.l"))
    setGeneric("p.l", function(object) standardGeneric("p.l"))
 if(!isGeneric("q.r"))
    setGeneric("q.r", function(object) standardGeneric("q.r"))
+if(!isGeneric("p.r"))
+   setGeneric("p.r", function(object) standardGeneric("p.r"))
+if(!isGeneric("q.l"))
+   setGeneric("q.l", function(object) standardGeneric("q.l"))
 
 if(!isGeneric("gaps"))
    setGeneric("gaps", function(object) standardGeneric("gaps"))
